# Omniparser_Schemas

./: .env.example  .gitignore  README.md  demo.json  edi_271.json  edi_834.json  eligibility_payer_template.json  hl7v2_default.json  hl7v2_default_test.json  input.txt  load_external_variables.sh  pmd_to_obr_charges.json  pmd_to_obr_charges1.json  prod_defects.json  pyproject.toml  temperature.json  x12_edi_835.json
.circleci/: config.yml
src/omniparser_schemas/common/: globals.py
src/omniparser_schemas/custom/: check_FHIR_resource_element.py
src/omniparser_schemas/parser/: RegressionTestData.txt  filter.py  main.py  universal_etl_parser.py
src/omniparser_schemas/smilecdr/: main.py  post_fhir_bundle_smilecdr.py  regression_tests_smilecdr.py  smile_cdr_token.py  universal_etl_parser.py
tests/regression/: account_resource.py  claim_1_resource.py  claim_2_resource.py  claim_3_resource.py  copy_parser_template.py  coverage_1_resource.py  coverage_2_resource.py  coverage_3_resource.py  coverage_resource.py  encounter_resource.py  main.py  missing_segment.py  organization_resource.py  patient_resource.py  practitioner_attending_resource.py  practitioner_referring_resource.py  relatedperson_insurance_1_resource.py  relatedperson_insurance_2_resource.py  relatedperson_insurance_3_resource.py  relatedperson_resource.py  unused.py
tests/regression/reg_globals/: account_reg_globals.py  claim_reg_globals.py  coverage_reg_globals.py  enocunter_reg_globals.py  identifier_urls.py  organization_reg_globals.py  patient_reg_global.py  practitioner_reg_globals.py  (+4 more)
(+39 files in other folders)
