[tool.poetry]
name = "omniparser-schemas"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "omniparser_schemas", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
executeETLparser = "src.omniparser_schemas.parser.main:cli"
test = "tests.regression.main:cli"
